fix align style

--- a/assets/js/blocks/cart-checkout/mini-cart/style.scss
+++ b/assets/js/blocks/cart-checkout/mini-cart/style.scss
@@ -1,4 +1,4 @@
-.wc-block-mini-cart.wp-block-woocommerce-mini-cart {
+.wc-block-mini-cart {
 	background-color: transparent !important;
 	display: flex;
 	justify-content: flex-end;
